Fix title spacing

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -39,6 +39,10 @@ input#search-bar {
     margin-bottom: 10px;
 }
 
+.modal h3 {
+    margin-bottom: 20px;
+}
+
 .card-img-top {
     box-shadow: 0 19px 38px rgba(0, 0, 0, 0.3), 0 15px 12px rgba(0, 0, 0, 0.2);
     filter: brightness(40%);
